--- a/gif-app/package.json
+++ b/gif-app/package.json
@@ -6,25 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "test": "jest --watchAll",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watch"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.4.0",
-    "babel-jest": "^29.4.3",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-jest": "^29.4.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
