--- a/gif-app/package.json
+++ b/gif-app/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "whatwg-fetch": "^3.6.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.0",
@@ -26,8 +25,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
